@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.451 2005/11/01 04:35:29 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.452 2005/11/03 01:50:15 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
+
+  2 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/net/client/gliclient.py:
+  try to use HTTPS for XMLRPC first and fallback to HTTP
 
   31 Oct 2005; Preston Cody <codeman@gentoo.org>
   wegli: daemons and services screens done.
